# havocst-IDS

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
rust-IDS.git/: config  packed-refs
rust-IDS.git/filter-repo/: commit-map  ref-map
rust-IDS.git/info/: refs
rust-IDS.git/objects/info/: commit-graph  packs
rust-IDS.git/objects/pack/: pack-7b3dd91ee601a44648ca292f7641ea698b85a9a9.bitmap  pack-7b3dd91ee601a44648ca292f7641ea698b85a9a9.idx  pack-7b3dd91ee601a44648ca292f7641ea698b85a9a9.pack  pack-7b3dd91ee601a44648ca292f7641ea698b85a9a9.rev
src/: main.rs
